--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -22,6 +22,19 @@
     "current": "Текущий",
     "completed": "завершено"
   },
+  "preview": {
+    "title": "3D Предпросмотр",
+    "volume": "Объём",
+    "material": "Материал",
+    "transparency": {
+      "title": "Прозрачность",
+      "label": "Прозрачность резервуара",
+      "opaque": "Непрозрачный",
+      "transparent": "Прозрачный",
+      "percentage": "% прозрачности",
+      "description": "Регулируйте прозрачность для лучшего просмотра внутренней структуры и деталей резервуара"
+    }
+  },
   "navigation": {
     "home": "Главная",
     "configurator": "Конфигуратор",
@@ -242,47 +255,113 @@
     "title": "Выберите дополнительные аксессуары",
     "subtitle": "Рекомендуемые аксессуары на основе назначения резервуара",
     "recommended": "Рекомендуется",
+    "optional": "Опционально",
+    "estimatedCost": "Ориентировочная стоимость",
+    "technical": "Техническая информация",
+    "benefits": "Преимущества",
+    "applications": "Применение",
     "accessories": {
-      "manhole": {
-        "title": "Люк",
-        "description": "Отверстие для доступа человека"
+      "supportLegs": {
+        "title": "Опорные ноги",
+        "description": "Конструктивная система опор для подъема резервуара",
+        "benefits": [
+          "Улучшенный дренаж",
+          "Легкий доступ для обслуживания",
+          "Лучшая стабильность"
+        ],
+        "applications": [
+          "Все типы резервуаров",
+          "Уличные установки"
+        ],
+        "technical": "Регулируемые по высоте ноги с анкерными болтами"
       },
-      "drain": {
-        "title": "Сливная труба",
-        "description": "Для опорожнения резервуара"
+      "thermalInsulation": {
+        "title": "Теплоизоляция",
+        "description": "Изоляционная оболочка для поддержания температуры и предотвращения конденсации",
+        "benefits": [
+          "Контроль температуры",
+          "Энергоэффективность",
+          "Предотвращение конденсации"
+        ],
+        "applications": [
+          "Хранение при контролируемой температуре",
+          "Уличные установки"
+        ],
+        "technical": "Пенополиуретан или минеральная вата с защитным покрытием"
       },
-      "overflow": {
-        "title": "Переливная труба",
-        "description": "Защита от переполнения"
+      "cipSystem": {
+        "title": "CIP (Очистка на месте) система",
+        "description": "Автоматизированная система очистки с распылительными шарами и форсунками",
+        "benefits": [
+          "Автоматизированная очистка",
+          "Стандарты гигиены",
+          "Сокращение простоев"
+        ],
+        "applications": [
+          "Пищевая промышленность",
+          "Фармацевтика",
+          "Молочная промышленность"
+        ],
+        "technical": "Вращающиеся распылительные головки с контролируемой скоростью потока"
       },
-      "vent": {
-        "title": "Вентиляционный клапан",
-        "description": "Для выравнивания давления"
+      "pressureRelief": {
+        "title": "Сброс давления / Вентиляция",
+        "description": "Предохранительные клапаны и системы вентиляции для управления давлением",
+        "benefits": [
+          "Соответствие безопасности",
+          "Контроль давления",
+          "Предотвращение вакуума"
+        ],
+        "applications": [
+          "Герметичные системы",
+          "Хранение химикатов",
+          "Критически важные приложения"
+        ],
+        "technical": "Предохранительные клапаны, прерыватели вакуума и пламегасители"
       },
-      "levelGauge": {
-        "title": "Уровнемер",
-        "description": "Для контроля уровня жидкости"
+      "levelIndicators": {
+        "title": "Индикаторы уровня жидкости",
+        "description": "Визуальные и электронные системы мониторинга уровня",
+        "benefits": [
+          "Мониторинг в реальном времени",
+          "Управление запасами",
+          "Предотвращение переполнения"
+        ],
+        "applications": [
+          "Мониторинг процессов",
+          "Автоматизированные системы",
+          "Контроль запасов"
+        ],
+        "technical": "Ультразвуковые датчики, смотровые стекла или поплавковые датчики"
       },
-      "ladder": {
-        "title": "Лестница",
-        "description": "Безопасный доступ к резервуару"
-      },
-      "insulation": {
-        "title": "Изоляция",
-        "description": "Тепловая изоляция"
-      },
-      "heating": {
-        "title": "Нагревательный элемент",
-        "description": "Для нагрева содержимого"
-      },
-      "agitator": {
-        "title": "Мешалка",
-        "description": "Для перемешивания содержимого"
-      },
-      "coating": {
-        "title": "Защитное покрытие",
-        "description": "Дополнительная защита"
+      "hatchesAndDrains": {
+        "title": "Люки, зажимы, дренажи",
+        "description": "Люки доступа, дренажные клапаны и соединительные фитинги",
+        "benefits": [
+          "Легкий доступ",
+          "Полный дренаж",
+          "Удобство обслуживания"
+        ],
+        "applications": [
+          "Все резервуарные применения",
+          "Требования к обслуживанию"
+        ],
+        "technical": "Люки, tri-clamp соединения и наклонные дренажные выходы"
       }
+    },
+    "costLevels": {
+      "None": "Нет",
+      "Low": "Низкая",
+      "Low-Medium": "Низкая-Средняя",
+      "Medium": "Средняя",
+      "High": "Высокая"
+    },
+    "summary": {
+      "title": "Выбранные аксессуары",
+      "selectedCount": "аксессуаров выбрано",
+      "totalCost": "Общая ориентировочная стоимость",
+      "noAccessories": "Аксессуары не выбраны",
+      "noAccessoriesDescription": "Вы можете добавить аксессуары для расширения функциональности резервуара"
     }
   },
   "summaryStep": {
