--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -42,7 +42,7 @@
     "contact": "Contact"
   },
   "header": {
-    "title": "ASTRA Tank Configurator",
+    "title": "Tank Configurator",
     "subtitle": "Design the perfect tank for your needs"
   },
   "stepper": {
