--- a/src/locales/lt.json
+++ b/src/locales/lt.json
@@ -42,7 +42,7 @@
     "contact": "Kontaktai"
   },
   "header": {
-    "title": "ASTRA Talpyklų Konfiguratorius",
+    "title": " Talpyklų Konfigūratorius",
     "subtitle": "Sukurkite idealią talpyklą savo poreikiams"
   },
   "stepper": {
