--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -42,7 +42,7 @@
     "contact": "Контакты"
   },
   "header": {
-    "title": "Конфигуратор резервуаров ASTRA",
+    "title": "Конфигуратор резервуаров",
     "subtitle": "Создайте идеальный резервуар для ваших нужд"
   },
   "stepper": {
